src/objects/Agenda_Item_MERC__c.object
<CustomObject>
    <description>Used to construct and store Agendas for Meetings to be distributed to HCPs or displayed on the Web Service : MERC : Created on 09/26/2013 by John Adams, Mavens Consulting</description>
    <fields>
        <fullName>Agenda_Item_Description_MERC__c</fullName>
        <description>Provide description for agenda item that will customer facing. Created 11/18/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Please provide description of this agenda item to be displayed to the customer.</inlineHelpText>
        <label>Agenda Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cnfrm_Chg_Fnl_Agnd_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Agenda Item is changed, validation rule will require this box to be checked to confirm if status &quot;Final Agenda&quot;.
Created by John A Adams 12/19/2013</description>
        <label>Confirm Change to Final Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time_MERC__c</fullName>
        <description>Date and time that session will end
Created by John A Adams 10/8/2013</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time_in_Meeting_Time_Zone_MERC__c</fullName>
        <description>This field is read-only, stamped by Apex in the time zone of the meeting. -JFerraro Dec 19, 2013</description>
        <label>End Time (Meeting Time Zone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>One to Many relationship with Meeting
Created by John A Adams 9/30/2013</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Time_Zone_MERC__c</fullName>
        <formula>text(Meeting_MERC__r.Meeting_Time_Zone_MERC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTI_Transaction_Id_MERC__c</fullName>
        <description>Used by Veeva to Mercury Interface. Oliver Dunford 10th Jan.</description>
        <label>RTI Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_MERC__c</fullName>
        <description>Room name or number that the meeting session is to be held in
Created by John A Adams 10/8/2013</description>
        <label>Room</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Type_MERC__c</fullName>
        <description>Tracks type of session to track agenda details. Created 10/08/2013 by KLorenti.</description>
        <label>Session Type</label>
        <picklist>
            <picklistValues>
                <fullName>General Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time_MERC__c</fullName>
        <description>Start date and time of session
Created by John A Adams 10/8/2013</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_in_Meeting_Time_Zone_MERC__c</fullName>
        <description>This field is read-only, stamped by Apex in the time zone of the meeting. -JFerraro Dec 19, 2013</description>
        <label>Start Time (Meeting Time Zone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agenda Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_MERC__c</columns>
        <columns>Start_Time_MERC__c</columns>
        <columns>End_Time_MERC__c</columns>
        <columns>Session_Type_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agenda_Item_Change_MERC</fullName>
        <active>true</active>
        <description>Confirm that the agenda item should be changed. Created by John A Adams 12/19/2013</description>
        <errorConditionFormula>TEXT(Meeting_MERC__r.Agenda_Status_MERC__c) = &quot;Final&quot; &amp;&amp;  Cnfrm_Chg_Fnl_Agnd_MERC__c == false</errorConditionFormula>
        <errorMessage>Please confirm you would like to change an item on the Final Agenda.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_End_After_Start_MERC</fullName>
        <active>true</active>
        <description>Rule to prevent entering an end time for a session before it starts
Created by John A Adams 10/3/2013</description>
        <errorConditionFormula>CreatedDate &gt;  LastModifiedDate</errorConditionFormula>
        <errorDisplayField>End_Time_MERC__c</errorDisplayField>
        <errorMessage>The agenda item end time must be after the start time</errorMessage>
    </validationRules>
</CustomObject>